@@ -19,33 +19,37 @@ package org.apache.solr.util;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
-
-import com.google.common.collect.ImmutableMap;
-import org.locationtech.spatial4j.distance.DistanceUtils;
 import org.apache.solr.schema.AbstractSpatialFieldType;
+import org.locationtech.spatial4j.distance.DistanceUtils;
 
 /**
  * Used with a spatial field type for all distance measurements.
- * 
+ *
  * @see AbstractSpatialFieldType
  */
 public class DistanceUnits {
-  public final static String KILOMETERS_PARAM = "kilometers";
-  public final static String MILES_PARAM = "miles";
-  public final static String DEGREES_PARAM = "degrees";
+  public static final String KILOMETERS_PARAM = "kilometers";
+  public static final String MILES_PARAM = "miles";
+  public static final String DEGREES_PARAM = "degrees";
 
   // Singleton distance units instances
-  public final static DistanceUnits KILOMETERS = new DistanceUnits(KILOMETERS_PARAM, DistanceUtils.EARTH_MEAN_RADIUS_KM, 
-      DistanceUtils.KM_TO_DEG);
-  public final static DistanceUnits MILES = new DistanceUnits(MILES_PARAM, DistanceUtils.EARTH_MEAN_RADIUS_MI, 
-      DistanceUtils.MILES_TO_KM * DistanceUtils.KM_TO_DEG);
-  public final static DistanceUnits DEGREES = new DistanceUnits(DEGREES_PARAM, 180.0/Math.PI, 1.0);
+  public static final DistanceUnits KILOMETERS =
+      new DistanceUnits(
+          KILOMETERS_PARAM, DistanceUtils.EARTH_MEAN_RADIUS_KM, DistanceUtils.KM_TO_DEG);
+  public static final DistanceUnits MILES =
+      new DistanceUnits(
+          MILES_PARAM,
+          DistanceUtils.EARTH_MEAN_RADIUS_MI,
+          DistanceUtils.MILES_TO_KM * DistanceUtils.KM_TO_DEG);
+  public static final DistanceUnits DEGREES =
+      new DistanceUnits(DEGREES_PARAM, 180.0 / Math.PI, 1.0);
 
-  //volatile so other threads see when we replace when copy-on-write
-  private static volatile Map<String, DistanceUnits> instances = ImmutableMap.of(
-      KILOMETERS_PARAM, KILOMETERS,
-      MILES_PARAM, MILES,
-      DEGREES_PARAM, DEGREES);
+  // volatile so other threads see when we replace when copy-on-write
+  private static volatile Map<String, DistanceUnits> instances =
+      Map.of(
+          KILOMETERS_PARAM, KILOMETERS,
+          MILES_PARAM, MILES,
+          DEGREES_PARAM, DEGREES);
 
   private final String stringIdentifier;
   private final double earthRadius;
@@ -61,9 +65,10 @@ public class DistanceUnits {
 
   /**
    * Parses a string representation of distance units and returns its implementing class instance.
-   * Preferred way to parse a DistanceUnits would be to use {@link AbstractSpatialFieldType#parseDistanceUnits(String)},
-   * since it will default to one defined on the field type if the string is null.
-   * 
+   * Preferred way to parse a DistanceUnits would be to use {@link
+   * AbstractSpatialFieldType#parseDistanceUnits(String)}, since it will default to one defined on
+   * the field type if the string is null.
+   *
    * @param str String representation of distance units, e.g. "kilometers", "miles" etc. (null ok)
    * @return an instance of the concrete DistanceUnits, null if not found.
    */
@@ -76,7 +81,6 @@ public class DistanceUnits {
   }
 
   /**
-   * 
    * @return Radius of the earth in this distance units
    */
   public double getEarthRadius() {
@@ -84,7 +88,6 @@ public class DistanceUnits {
   }
 
   /**
-   * 
    * @return multiplier needed to convert a distance in current units to degrees
    */
   public double multiplierFromThisUnitToDegrees() {
@@ -92,7 +95,6 @@ public class DistanceUnits {
   }
 
   /**
-   * 
    * @return multiplier needed to convert a distance in degrees to current units
    */
   public double multiplierFromDegreesToThisUnit() {
@@ -100,7 +102,6 @@ public class DistanceUnits {
   }
 
   /**
-   * 
    * @return the string identifier associated with this units instance
    */
   public String getStringIdentifier() {
@@ -109,16 +110,17 @@ public class DistanceUnits {
 
   /**
    * Custom distance units can be supplied using this method. It's thread-safe.
-   * 
+   *
    * @param strId string identifier for the units
    * @param earthRadius radius of earth in supplied units
    * @param multiplierThisToDegrees multiplier to convert to degrees
    */
-  public static synchronized void addUnits(String strId, double earthRadius, double multiplierThisToDegrees) {
-    //copy-on-write.
-    Map<String, DistanceUnits> map = new HashMap<String, DistanceUnits>(instances);
+  public static synchronized void addUnits(
+      String strId, double earthRadius, double multiplierThisToDegrees) {
+    // copy-on-write.
+    Map<String, DistanceUnits> map = new HashMap<>(instances);
     map.put(strId, new DistanceUnits(strId, earthRadius, multiplierThisToDegrees));
-    instances = ImmutableMap.copyOf(map);
+    instances = Map.copyOf(map);
   }
 
   @Override
