@@ -16,7 +16,14 @@
  */
 package org.apache.solr.core;
 
-import java.io.*;
+import static java.util.Arrays.asList;
+import static org.apache.solr.common.util.Utils.getObjectByPath;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.StringReader;
 import java.lang.invoke.MethodHandles;
 import java.nio.ByteBuffer;
 import java.util.HashMap;
@@ -28,8 +35,6 @@ import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
-
-import com.google.common.collect.ImmutableList;
 import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
@@ -47,7 +52,6 @@ import org.apache.solr.search.SolrCache;
 import org.apache.solr.util.RESTfulServerProvider;
 import org.apache.solr.util.RestTestBase;
 import org.apache.solr.util.RestTestHarness;
-import org.apache.solr.util.SimplePostTool;
 import org.apache.solr.util.TimeOut;
 import org.eclipse.jetty.servlet.ServletHolder;
 import org.junit.After;
@@ -56,70 +60,62 @@ import org.noggit.JSONParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static java.util.Arrays.asList;
-import static org.apache.solr.common.util.Utils.getObjectByPath;
-
 public class TestSolrConfigHandler extends RestTestBase {
   private static final int TIMEOUT_S = 10;
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  private static File tmpSolrHome;
-  private static File tmpConfDir;
-
   private static final String collection = "collection1";
   private static final String confDir = collection + "/conf";
 
-    public static ByteBuffer getFileContent(String f) throws IOException {
-      return getFileContent(f, true);
-    }
+  public static ByteBuffer getFileContent(String f) throws IOException {
+    return getFileContent(f, true);
+  }
 
-    /**
-     * @param loadFromClassPath if true, it will look in the classpath to find the file,
-     *        otherwise load from absolute filesystem path.
-     */
-    public static ByteBuffer getFileContent(String f, boolean loadFromClassPath) throws IOException {
-      ByteBuffer jar;
-      File file = loadFromClassPath ? getFile(f): new File(f);
-      try (FileInputStream fis = new FileInputStream(file)) {
-        byte[] buf = new byte[fis.available()];
-        // TODO: This should check that we read the entire stream
-        fis.read(buf);
-        jar = ByteBuffer.wrap(buf);
+  /**
+   * @param loadFromClassPath if true, it will look in the classpath to find the file, otherwise
+   *     load from absolute filesystem path.
+   */
+  public static ByteBuffer getFileContent(String f, boolean loadFromClassPath) throws IOException {
+    ByteBuffer jar;
+    File file = loadFromClassPath ? getFile(f) : new File(f);
+    try (FileInputStream fis = new FileInputStream(file)) {
+      byte[] buf = new byte[fis.available()];
+      // TODO: This should check that we read the entire stream
+      fis.read(buf);
+      jar = ByteBuffer.wrap(buf);
+    }
+    return jar;
+  }
+
+  public static ByteBuffer persistZip(String loc, Class<?>... classes) throws IOException {
+    ByteBuffer jar = generateZip(classes);
+    try (FileOutputStream fos = new FileOutputStream(loc)) {
+      fos.write(jar.array(), jar.arrayOffset(), jar.limit());
+      fos.flush();
+    }
+    return jar;
+  }
+
+  public static ByteBuffer generateZip(Class<?>... classes) throws IOException {
+    Utils.BAOS bos = new Utils.BAOS();
+    try (ZipOutputStream zipOut = new ZipOutputStream(bos)) {
+      zipOut.setLevel(ZipOutputStream.DEFLATED);
+      for (Class<?> c : classes) {
+        String path = c.getName().replace('.', '/').concat(".class");
+        ZipEntry entry = new ZipEntry(path);
+        ByteBuffer b = Utils.toByteArray(c.getClassLoader().getResourceAsStream(path));
+        zipOut.putNextEntry(entry);
+        zipOut.write(b.array(), b.arrayOffset(), b.limit());
+        zipOut.closeEntry();
       }
-      return jar;
     }
+    return bos.getByteBuffer();
+  }
 
-    public static  ByteBuffer persistZip(String loc, Class<?>... classes) throws IOException {
-      ByteBuffer jar = generateZip(classes);
-      try (FileOutputStream fos =  new FileOutputStream(loc)){
-        fos.write(jar.array(), jar.arrayOffset(), jar.limit());
-        fos.flush();
-      }
-      return jar;
-    }
-
-    public static ByteBuffer generateZip(Class<?>... classes) throws IOException {
-      SimplePostTool.BAOS bos = new SimplePostTool.BAOS();
-      try (ZipOutputStream zipOut = new ZipOutputStream(bos)) {
-        zipOut.setLevel(ZipOutputStream.DEFLATED);
-        for (Class<?> c : classes) {
-          String path = c.getName().replace('.', '/').concat(".class");
-          ZipEntry entry = new ZipEntry(path);
-          ByteBuffer b = SimplePostTool.inputStreamToByteArray(c.getClassLoader().getResourceAsStream(path));
-          zipOut.putNextEntry(entry);
-          zipOut.write(b.array(), b.arrayOffset(), b.limit());
-          zipOut.closeEntry();
-        }
-      }
-      return bos.getByteBuffer();
-    }
-
-
-    @Before
+  @Before
   public void before() throws Exception {
-    tmpSolrHome = createTempDir().toFile();
-    tmpConfDir = new File(tmpSolrHome, confDir);
+    File tmpSolrHome = createTempDir().toFile();
     FileUtils.copyDirectory(new File(TEST_HOME()), tmpSolrHome.getAbsoluteFile());
 
     final SortedMap<ServletHolder, String> extraServlets = new TreeMap<>();
@@ -127,27 +123,29 @@ public class TestSolrConfigHandler extends RestTestBase {
     System.setProperty("managed.schema.mutable", "true");
     System.setProperty("enable.update.log", "false");
 
-    createJettyAndHarness(tmpSolrHome.getAbsolutePath(), "solrconfig-managed-schema.xml", "schema-rest.xml",
-        "/solr", true, extraServlets);
+    createJettyAndHarness(
+        tmpSolrHome.getAbsolutePath(),
+        "solrconfig-managed-schema.xml",
+        "schema-rest.xml",
+        "/solr",
+        true,
+        extraServlets);
     if (random().nextBoolean()) {
       log.info("These tests are run with V2 API");
-      restTestHarness.setServerProvider(() -> jetty.getBaseUrl().toString() + "/____v2/cores/" + DEFAULT_TEST_CORENAME);
+      restTestHarness.setServerProvider(
+          () -> getBaseUrl() + "/____v2/cores/" + DEFAULT_TEST_CORENAME);
     }
   }
 
   @After
   public void after() throws Exception {
-    if (jetty != null) {
-      jetty.stop();
-      jetty = null;
-    }
-    client = null;
+    solrClientTestRule.reset();
+
     if (restTestHarness != null) {
       restTestHarness.close();
     }
     restTestHarness = null;
   }
-
 
   public void testProperty() throws Exception {
     RestTestHarness harness = restTestHarness;
@@ -156,67 +154,64 @@ public class TestSolrConfigHandler extends RestTestBase {
     assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/system"), null));
     assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/mbeans"), null));
     assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/plugins"), null));
-    assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/threads"), null));
-    assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/properties"), null));
-    assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/logging"), null));
     assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/file"), null));
     assertNotNull(confMap._get(asList("config", "requestHandler", "/admin/ping"), null));
 
-    String payload = "{\n" +
-        " 'set-property' : { 'updateHandler.autoCommit.maxDocs':100, 'updateHandler.autoCommit.maxTime':10 , 'requestDispatcher.requestParsers.addHttpRequestToContext':true} \n" +
-        " }";
+    String payload =
+        "{\n"
+            + " 'set-property' : { 'updateHandler.autoCommit.maxDocs':100, 'updateHandler.autoCommit.maxTime':10 , 'requestDispatcher.requestParsers.addHttpRequestToContext':true} \n"
+            + " }";
     runConfigCommand(harness, "/config", payload);
 
     MapWriter m = getRespMap("/config/overlay", harness);
-    MapWriter props =null;
     assertEquals("100", m._getStr("overlay/props/updateHandler/autoCommit/maxDocs", null));
-    assertEquals("10", m._getStr("overlay/props/updateHandler/autoCommit/maxTime",null));
+    assertEquals("10", m._getStr("overlay/props/updateHandler/autoCommit/maxTime", null));
 
-    m =  getRespMap("/config/updateHandler", harness);
-    assertNotNull(m._get("config/updateHandler/commitWithin/softCommit",null));
-    assertNotNull(m._get("config/updateHandler/autoCommit/maxDocs",null));
-    assertNotNull(m._get("config/updateHandler/autoCommit/maxTime",null));
+    m = getRespMap("/config/updateHandler", harness);
+    assertNotNull(m._get("config/updateHandler/commitWithin/softCommit", null));
+    assertNotNull(m._get("config/updateHandler/autoCommit/maxDocs", null));
+    assertNotNull(m._get("config/updateHandler/autoCommit/maxTime", null));
 
-    m =  getRespMap("/config", harness);
+    m = getRespMap("/config", harness);
     assertNotNull(m);
 
-    assertEquals("100", m._getStr("config/updateHandler/autoCommit/maxDocs",null));
-    assertEquals("10", m._getStr("config/updateHandler/autoCommit/maxTime",null));
-    assertEquals("true", m._getStr("config/requestDispatcher/requestParsers/addHttpRequestToContext",null));
-    payload = "{\n" +
-        " 'unset-property' :  'updateHandler.autoCommit.maxDocs' \n" +
-        " }";
+    assertEquals("100", m._getStr("config/updateHandler/autoCommit/maxDocs", null));
+    assertEquals("10", m._getStr("config/updateHandler/autoCommit/maxTime", null));
+    assertEquals(
+        "true", m._getStr("config/requestDispatcher/requestParsers/addHttpRequestToContext", null));
+    payload = "{\n" + " 'unset-property' :  'updateHandler.autoCommit.maxDocs' \n" + " }";
     runConfigCommand(harness, "/config", payload);
 
-    m =  getRespMap("/config/overlay", harness);
-    assertNull(m._get("overlay/props/updateHandler/autoCommit/maxDocs",null));
-    assertEquals("10", m._getStr("overlay/props/updateHandler/autoCommit/maxTime",null));
+    m = getRespMap("/config/overlay", harness);
+    assertNull(m._get("overlay/props/updateHandler/autoCommit/maxDocs", null));
+    assertEquals("10", m._getStr("overlay/props/updateHandler/autoCommit/maxTime", null));
   }
 
   public void testUserProp() throws Exception {
     RestTestHarness harness = restTestHarness;
-    String payload = "{\n" +
-        " 'set-user-property' : { 'my.custom.variable.a':'MODIFIEDA'," +
-        " 'my.custom.variable.b':'MODIFIEDB' } \n" +
-        " }";
+    String payload =
+        "{\n"
+            + " 'set-user-property' : { 'my.custom.variable.a':'MODIFIEDA',"
+            + " 'my.custom.variable.b':'MODIFIEDB' } \n"
+            + " }";
     runConfigCommand(harness, "/config", payload);
 
-    MapWriter m =  getRespMap("/config/overlay", harness);//.get("overlay");
-    assertEquals(m._get("overlay/userProps/my.custom.variable.a",null), "MODIFIEDA");
-    assertEquals(m._get("overlay/userProps/my.custom.variable.b",null), "MODIFIEDB");
+    MapWriter m = getRespMap("/config/overlay", harness); // .get("overlay");
+    assertEquals(m._get("overlay/userProps/my.custom.variable.a", null), "MODIFIEDA");
+    assertEquals(m._get("overlay/userProps/my.custom.variable.b", null), "MODIFIEDB");
 
-    m = getRespMap("/dump?json.nl=map&initArgs=true", harness);//.get("initArgs");
+    m = getRespMap("/dump?json.nl=map&initArgs=true", harness); // .get("initArgs");
 
-    assertEquals("MODIFIEDA", m._get("initArgs/defaults/a",null));
-    assertEquals("MODIFIEDB", m._get("initArgs/defaults/b",null));
-
+    assertEquals("MODIFIEDA", m._get("initArgs/defaults/a", null));
+    assertEquals("MODIFIEDB", m._get("initArgs/defaults/b", null));
   }
 
   public void testReqHandlerAPIs() throws Exception {
     reqhandlertests(restTestHarness, null, null);
   }
 
-  public static void runConfigCommand(RestTestHarness harness, String uri, String payload) throws IOException {
+  public static void runConfigCommand(RestTestHarness harness, String uri, String payload)
+      throws IOException {
     String json = SolrTestCaseJ4.json(payload);
     log.info("going to send config command. path {} , payload: {}", uri, payload);
     String response = harness.post(uri, json);
@@ -225,27 +220,36 @@ public class TestSolrConfigHandler extends RestTestBase {
     assertNull(response, map.get("errors")); // Will this ever be returned?
   }
 
-  public static void runConfigCommandExpectFailure(RestTestHarness harness, String uri, String payload, String expectedErrorMessage) throws Exception {
+  public static void runConfigCommandExpectFailure(
+      RestTestHarness harness, String uri, String payload, String expectedErrorMessage)
+      throws Exception {
     String json = SolrTestCaseJ4.json(payload);
     log.info("going to send config command. path {} , payload: {}", uri, payload);
     String response = harness.post(uri, json);
-    Map<?, ?> map = (Map<?, ?>)Utils.fromJSONString(response);
+    Map<?, ?> map = (Map<?, ?>) Utils.fromJSONString(response);
     assertNotNull(response, map.get("errorMessages"));
     assertNotNull(response, map.get("error"));
-    assertTrue("Expected status != 0: " + response, 0L != (Long)((Map<?, ?>)map.get("responseHeader")).get("status"));
-    List<?> errorDetails = (List<?>)((Map<?, ?>)map.get("error")).get("details");
-    List<?> errorMessages = (List<?>)((Map<?, ?>)errorDetails.get(0)).get("errorMessages");
-    assertTrue("Expected '" + expectedErrorMessage + "': " + response, 
+    assertTrue(
+        "Expected status != 0: " + response,
+        0L != (Long) ((Map<?, ?>) map.get("responseHeader")).get("status"));
+    List<?> errorDetails = (List<?>) ((Map<?, ?>) map.get("error")).get("details");
+    List<?> errorMessages = (List<?>) ((Map<?, ?>) errorDetails.get(0)).get("errorMessages");
+    assertTrue(
+        "Expected '" + expectedErrorMessage + "': " + response,
         errorMessages.get(0).toString().contains(expectedErrorMessage));
   }
 
-  public static void reqhandlertests(RestTestHarness writeHarness, String testServerBaseUrl, CloudSolrClient cloudSolrClient) throws Exception {
-    String payload = "{\n" +
-        "'create-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy'}\n" +
-        "}";
+  public static void reqhandlertests(
+      RestTestHarness writeHarness, String testServerBaseUrl, CloudSolrClient cloudSolrClient)
+      throws Exception {
+    String payload =
+        "{\n"
+            + "'create-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
 
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config/overlay",
         cloudSolrClient,
@@ -253,13 +257,15 @@ public class TestSolrConfigHandler extends RestTestBase {
         "lazy",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'update-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' ,registerPath :'/solr,/v2', " +
-        " 'startup' : 'lazy' , 'a':'b' , 'defaults': {'def_a':'def A val', 'multival':['a','b','c']}}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'update-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' ,registerPath :'/solr,/v2', "
+            + " 'startup' : 'lazy' , 'a':'b' , 'defaults': {'def_a':'def A val', 'multival':['a','b','c']}}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
 
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config/overlay",
         cloudSolrClient,
@@ -267,15 +273,17 @@ public class TestSolrConfigHandler extends RestTestBase {
         "b",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'update-requesthandler' : { 'name' : '/dump', " +
-        "'initParams': 'a'," +
-        "'class': 'org.apache.solr.handler.DumpRequestHandler' ," +
-        " 'defaults': {'a':'A','b':'B','c':'C'}}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'update-requesthandler' : { 'name' : '/dump', "
+            + "'initParams': 'a',"
+            + "'class': 'org.apache.solr.handler.DumpRequestHandler' ,"
+            + " 'defaults': {'a':'A','b':'B','c':'C'}}\n"
+            + "}";
 
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config/overlay",
         cloudSolrClient,
@@ -283,7 +291,8 @@ public class TestSolrConfigHandler extends RestTestBase {
         "C",
         TIMEOUT_S);
 
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/x?getdefaults=true&json.nl=map",
         cloudSolrClient,
@@ -291,7 +300,8 @@ public class TestSolrConfigHandler extends RestTestBase {
         "def A val",
         TIMEOUT_S);
 
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/x?param=multival&json.nl=map",
         cloudSolrClient,
@@ -299,41 +309,46 @@ public class TestSolrConfigHandler extends RestTestBase {
         asList("a", "b", "c"),
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'delete-requesthandler' : '/x'" +
-        "}";
+    payload = "{\n" + "'delete-requesthandler' : '/x'" + "}";
     runConfigCommand(writeHarness, "/config", payload);
     boolean success = false;
     long startTime = System.nanoTime();
     int maxTimeoutSeconds = 10;
-    while (TimeUnit.SECONDS.convert(System.nanoTime() - startTime, TimeUnit.NANOSECONDS) < maxTimeoutSeconds) {
+    while (TimeUnit.SECONDS.convert(System.nanoTime() - startTime, TimeUnit.NANOSECONDS)
+        < maxTimeoutSeconds) {
       String uri = "/config/overlay";
-      Map<?, ?> m = testServerBaseUrl == null ? getRespMap(uri, writeHarness) : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl + uri, cloudSolrClient);
+      Map<?, ?> m =
+          testServerBaseUrl == null
+              ? getRespMap(uri, writeHarness)
+              : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl + uri, cloudSolrClient);
       if (null == Utils.getObjectByPath(m, true, asList("overlay", "requestHandler", "/x", "a"))) {
         success = true;
         break;
       }
       Thread.sleep(100);
-
     }
     assertTrue("Could not delete requestHandler  ", success);
 
-    payload = "{\n" +
-        "'create-queryconverter' : { 'name' : 'qc', 'class': 'org.apache.solr.spelling.SpellingQueryConverter'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'create-queryconverter' : { 'name' : 'qc', 'class': 'org.apache.solr.spelling.SpellingQueryConverter'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
         asList("config", "queryConverter", "qc", "class"),
         "org.apache.solr.spelling.SpellingQueryConverter",
         TIMEOUT_S);
-    payload = "{\n" +
-        "'update-queryconverter' : { 'name' : 'qc', 'class': 'org.apache.solr.spelling.SuggestQueryConverter'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'update-queryconverter' : { 'name' : 'qc', 'class': 'org.apache.solr.spelling.SuggestQueryConverter'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -341,11 +356,10 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.spelling.SuggestQueryConverter",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'delete-queryconverter' : 'qc'" +
-        "}";
+    payload = "{\n" + "'delete-queryconverter' : 'qc'" + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -353,22 +367,71 @@ public class TestSolrConfigHandler extends RestTestBase {
         null,
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'create-searchcomponent' : { 'name' : 'tc', 'class': 'org.apache.solr.handler.component.TermsComponent'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'add-listener' : { 'event' : 'firstSearcher', 'class': 'solr.QuerySenderListener', "
+            + "'name':'f7fb2d87bea44464af2401cf33f42b69', "
+            + "'queries':[{'q':'static firstSearcher warming in solrconfig.xml'}]"
+            + "}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
+        testServerBaseUrl,
+        "/config",
+        cloudSolrClient,
+        asList("config", "listener[0]", "class"),
+        "solr.QuerySenderListener",
+        TIMEOUT_S);
+
+    payload =
+        "{\n"
+            + "'update-listener' : { 'event' : 'firstSearcher', 'class': 'org.apache.solr.core.QuerySenderListener', "
+            + "'name':'f7fb2d87bea44464af2401cf33f42b69', "
+            + "'queries':[{'q':'static firstSearcher warming in solrconfig.xml'}]"
+            + "}\n"
+            + "}";
+    runConfigCommand(writeHarness, "/config", payload);
+    testForResponseElement(
+        writeHarness,
+        testServerBaseUrl,
+        "/config",
+        cloudSolrClient,
+        asList("config", "listener[0]", "class"),
+        "org.apache.solr.core.QuerySenderListener",
+        TIMEOUT_S);
+
+    payload = "{\n" + "'delete-listener' : 'f7fb2d87bea44464af2401cf33f42b69'" + "}";
+    runConfigCommand(writeHarness, "/config", payload);
+    testForResponseElement(
+        writeHarness,
+        testServerBaseUrl,
+        "/config",
+        cloudSolrClient,
+        asList("config", "listener"),
+        null,
+        TIMEOUT_S);
+
+    payload =
+        "{\n"
+            + "'create-searchcomponent' : { 'name' : 'tc', 'class': 'org.apache.solr.handler.component.TermsComponent'}\n"
+            + "}";
+    runConfigCommand(writeHarness, "/config", payload);
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
         asList("config", "searchComponent", "tc", "class"),
         "org.apache.solr.handler.component.TermsComponent",
         TIMEOUT_S);
-    payload = "{\n" +
-        "'update-searchcomponent' : { 'name' : 'tc', 'class': 'org.apache.solr.handler.component.TermVectorComponent' }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'update-searchcomponent' : { 'name' : 'tc', 'class': 'org.apache.solr.handler.component.TermVectorComponent' }\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -376,23 +439,25 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.handler.component.TermVectorComponent",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'delete-searchcomponent' : 'tc'" +
-        "}";
+    payload = "{\n" + "'delete-searchcomponent' : 'tc'" + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
         asList("config", "searchComponent", "tc"),
         null,
         TIMEOUT_S);
-    //<valueSourceParser name="countUsage" class="org.apache.solr.core.CountUsageValueSourceParser"/>
-    payload = "{\n" +
-        "'create-valuesourceparser' : { 'name' : 'cu', 'class': 'org.apache.solr.core.CountUsageValueSourceParser'}\n" +
-        "}";
+    // <valueSourceParser name="countUsage"
+    // class="org.apache.solr.core.CountUsageValueSourceParser"/>
+    payload =
+        "{\n"
+            + "'create-valuesourceparser' : { 'name' : 'cu', 'class': 'org.apache.solr.core.CountUsageValueSourceParser'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -400,13 +465,15 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.core.CountUsageValueSourceParser",
         TIMEOUT_S);
     //  <valueSourceParser name="nvl" class="org.apache.solr.search.function.NvlValueSourceParser">
-//    <float name="nvlFloatValue">0.0</float>
-//    </valueSourceParser>
-    payload = "{\n" +
-        "'update-valuesourceparser' : { 'name' : 'cu', 'class': 'org.apache.solr.search.function.NvlValueSourceParser'}\n" +
-        "}";
+    //    <float name="nvlFloatValue">0.0</float>
+    //    </valueSourceParser>
+    payload =
+        "{\n"
+            + "'update-valuesourceparser' : { 'name' : 'cu', 'class': 'org.apache.solr.search.function.NvlValueSourceParser'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -414,25 +481,27 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.search.function.NvlValueSourceParser",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'delete-valuesourceparser' : 'cu'" +
-        "}";
+    payload = "{\n" + "'delete-valuesourceparser' : 'cu'" + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
         asList("config", "valueSourceParser", "cu"),
         null,
         TIMEOUT_S);
-//    <transformer name="mytrans2" class="org.apache.solr.response.transform.ValueAugmenterFactory" >
-//    <int name="value">5</int>
-//    </transformer>
-    payload = "{\n" +
-        "'create-transformer' : { 'name' : 'mytrans', 'class': 'org.apache.solr.response.transform.ValueAugmenterFactory', 'value':'5'}\n" +
-        "}";
+    //    <transformer name="mytrans2"
+    // class="org.apache.solr.response.transform.ValueAugmenterFactory" >
+    //    <int name="value">5</int>
+    //    </transformer>
+    payload =
+        "{\n"
+            + "'create-transformer' : { 'name' : 'mytrans', 'class': 'org.apache.solr.response.transform.ValueAugmenterFactory', 'value':'5'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -440,11 +509,13 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.response.transform.ValueAugmenterFactory",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'update-transformer' : { 'name' : 'mytrans', 'class': 'org.apache.solr.response.transform.ValueAugmenterFactory', 'value':'6'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'update-transformer' : { 'name' : 'mytrans', 'class': 'org.apache.solr.response.transform.ValueAugmenterFactory', 'value':'6'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config",
         cloudSolrClient,
@@ -452,80 +523,92 @@ public class TestSolrConfigHandler extends RestTestBase {
         "6",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'delete-transformer' : 'mytrans'," +
-        "'create-initparams' : { 'name' : 'hello', 'key':'val'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'delete-transformer' : 'mytrans',"
+            + "'create-initparams' : { 'name' : 'hello', 'key':'val'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    Map<?, ?> map = testForResponseElement(writeHarness,
-        testServerBaseUrl,
-        "/config",
-        cloudSolrClient,
-        asList("config", "transformer", "mytrans"),
-        null,
-        TIMEOUT_S);
+    Map<?, ?> map =
+        testForResponseElement(
+            writeHarness,
+            testServerBaseUrl,
+            "/config",
+            cloudSolrClient,
+            asList("config", "transformer", "mytrans"),
+            null,
+            TIMEOUT_S);
 
     List<?> l = (List<?>) Utils.getObjectByPath(map, false, asList("config", "initParams"));
-    assertNotNull("no object /config/initParams : "+ map , l);
-    assertEquals( 2, l.size());
-    assertEquals( "val", ((Map)l.get(1)).get("key") );
+    assertNotNull("no object /config/initParams : " + map, l);
+    assertEquals(2, l.size());
+    assertEquals("val", ((Map) l.get(1)).get("key"));
 
-
-    payload = "{\n" +
-        "    'add-searchcomponent': {\n" +
-        "        'name': 'myspellcheck',\n" +
-        "        'class': 'solr.SpellCheckComponent',\n" +
-        "        'queryAnalyzerFieldType': 'text_general',\n" +
-        "        'spellchecker': {\n" +
-        "            'name': 'default',\n" +
-        "            'field': '_text_',\n" +
-        "            'class': 'solr.DirectSolrSpellChecker'\n" +
-        "        }\n" +
-        "    }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "    'add-searchcomponent': {\n"
+            + "        'name': 'myspellcheck',\n"
+            + "        'class': 'solr.SpellCheckComponent',\n"
+            + "        'queryAnalyzerFieldType': 'text_general',\n"
+            + "        'spellchecker': {\n"
+            + "            'name': 'default',\n"
+            + "            'field': '_text_',\n"
+            + "            'class': 'solr.DirectSolrSpellChecker'\n"
+            + "        }\n"
+            + "    }\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    map = testForResponseElement(writeHarness,
-        testServerBaseUrl,
-        "/config",
-        cloudSolrClient,
-        asList("config", "searchComponent", "myspellcheck", "spellchecker", "class"),
-        "solr.DirectSolrSpellChecker",
-        TIMEOUT_S);
+    map =
+        testForResponseElement(
+            writeHarness,
+            testServerBaseUrl,
+            "/config",
+            cloudSolrClient,
+            asList("config", "searchComponent", "myspellcheck", "spellchecker", "class"),
+            "solr.DirectSolrSpellChecker",
+            TIMEOUT_S);
 
-    payload = "{\n" +
-        "    'add-requesthandler': {\n" +
-        "        name : '/dump100',\n" +
-        "       registerPath :'/solr,/v2',"+
-    "        class : 'org.apache.solr.handler.DumpRequestHandler'," +
-        "        suggester: [{name: s1,lookupImpl: FuzzyLookupFactory, dictionaryImpl : DocumentDictionaryFactory}," +
-        "                    {name: s2,lookupImpl: FuzzyLookupFactory , dictionaryImpl : DocumentExpressionDictionaryFactory}]" +
-        "    }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "    'add-requesthandler': {\n"
+            + "        name : '/dump100',\n"
+            + "       registerPath :'/solr,/v2',"
+            + "        class : 'org.apache.solr.handler.DumpRequestHandler',"
+            + "        suggester: [{name: s1,lookupImpl: FuzzyLookupFactory, dictionaryImpl : DocumentDictionaryFactory},"
+            + "                    {name: s2,lookupImpl: FuzzyLookupFactory , dictionaryImpl : DocumentExpressionDictionaryFactory}]"
+            + "    }\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
-    map = testForResponseElement(writeHarness,
-        testServerBaseUrl,
-        "/config",
-        cloudSolrClient,
-        asList("config", "requestHandler", "/dump100", "class"),
-        "org.apache.solr.handler.DumpRequestHandler",
-        TIMEOUT_S);
+    map =
+        testForResponseElement(
+            writeHarness,
+            testServerBaseUrl,
+            "/config",
+            cloudSolrClient,
+            asList("config", "requestHandler", "/dump100", "class"),
+            "org.apache.solr.handler.DumpRequestHandler",
+            TIMEOUT_S);
 
     map = getRespMap("/dump100?json.nl=arrmap&initArgs=true", writeHarness);
     List<?> initArgs = (List<?>) map.get("initArgs");
     assertNotNull(initArgs);
     assertTrue(initArgs.size() >= 2);
-    assertTrue(((Map)initArgs.get(2)).containsKey("suggester"));
-    assertTrue(((Map)initArgs.get(1)).containsKey("suggester"));
+    assertTrue(((Map) initArgs.get(2)).containsKey("suggester"));
+    assertTrue(((Map) initArgs.get(1)).containsKey("suggester"));
 
-    payload = "{\n" +
-        "'add-requesthandler' : { 'name' : '/dump101', 'class': " +
-        "'" + CacheTest.class.getName() + "', " +
-        "    registerPath :'/solr,/v2'"+
-        ", 'startup' : 'lazy'}\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'add-requesthandler' : { 'name' : '/dump101', 'class': "
+            + "'"
+            + CacheTest.class.getName()
+            + "', "
+            + "    registerPath :'/solr,/v2'"
+            + ", 'startup' : 'lazy'}\n"
+            + "}";
     runConfigCommand(writeHarness, "/config", payload);
 
-    testForResponseElement(writeHarness,
+    testForResponseElement(
+        writeHarness,
         testServerBaseUrl,
         "/config/overlay",
         cloudSolrClient,
@@ -533,45 +616,72 @@ public class TestSolrConfigHandler extends RestTestBase {
         "lazy",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'add-cache' : {name:'lfuCacheDecayFalse', class:'solr.search.CaffeineCache', size:10 ,initialSize:9 , timeDecay:false }," +
-        "'add-cache' : {name: 'perSegFilter', class: 'solr.search.CaffeineCache', size:10, initialSize:0 , autowarmCount:10}}";
+    payload =
+        "{\n"
+            + "'add-cache' : {name:'lfuCacheDecayFalse', class:'solr.search.CaffeineCache', size:10 ,initialSize:9 , timeDecay:false },"
+            + "'add-cache' : {name: 'perSegFilter', class: 'solr.search.CaffeineCache', size:10, initialSize:0 , autowarmCount:10}}";
     runConfigCommand(writeHarness, "/config", payload);
 
-    map = testForResponseElement(writeHarness,
-        testServerBaseUrl,
-        "/config/overlay",
-        cloudSolrClient,
-        asList("overlay", "cache", "lfuCacheDecayFalse", "class"),
+    map =
+        testForResponseElement(
+            writeHarness,
+            testServerBaseUrl,
+            "/config/overlay",
+            cloudSolrClient,
+            asList("overlay", "cache", "lfuCacheDecayFalse", "class"),
+            "solr.search.CaffeineCache",
+            TIMEOUT_S);
+    assertEquals(
         "solr.search.CaffeineCache",
-        TIMEOUT_S);
-    assertEquals("solr.search.CaffeineCache",getObjectByPath(map, true, ImmutableList.of("overlay", "cache", "perSegFilter", "class")));
+        getObjectByPath(map, true, List.of("overlay", "cache", "perSegFilter", "class")));
 
-    map = getRespMap("/dump101?cacheNames=lfuCacheDecayFalse&cacheNames=perSegFilter", writeHarness);
-    assertEquals("Actual output "+ Utils.toJSONString(map), "org.apache.solr.search.CaffeineCache",getObjectByPath(map, true, ImmutableList.of( "caches", "perSegFilter")));
-    assertEquals("Actual output "+ Utils.toJSONString(map), "org.apache.solr.search.CaffeineCache",getObjectByPath(map, true, ImmutableList.of( "caches", "lfuCacheDecayFalse")));
-
+    map =
+        getRespMap("/dump101?cacheNames=lfuCacheDecayFalse&cacheNames=perSegFilter", writeHarness);
+    assertEquals(
+        "Actual output " + Utils.toJSONString(map),
+        "org.apache.solr.search.CaffeineCache",
+        getObjectByPath(map, true, List.of("caches", "perSegFilter")));
+    assertEquals(
+        "Actual output " + Utils.toJSONString(map),
+        "org.apache.solr.search.CaffeineCache",
+        getObjectByPath(map, true, List.of("caches", "lfuCacheDecayFalse")));
   }
-  
+
   public void testFailures() throws Exception {
     String payload = "{ not-a-real-command: { param1: value1, param2: value2 } }";
-    runConfigCommandExpectFailure(restTestHarness, "/config", payload, "Unknown operation 'not-a-real-command'");
+    runConfigCommandExpectFailure(
+        restTestHarness, "/config", payload, "Unknown operation 'not-a-real-command'");
 
     payload = "{ set-property: { update.autoCreateFields: false } }";
-    runConfigCommandExpectFailure(restTestHarness, "/config", payload, "'update.autoCreateFields' is not an editable property");
-    
+    runConfigCommandExpectFailure(
+        restTestHarness,
+        "/config",
+        payload,
+        "'update.autoCreateFields' is not an editable property");
+
     payload = "{ set-property: { updateHandler.autoCommit.maxDocs: false } }";
-    runConfigCommandExpectFailure(restTestHarness, "/config", payload, "Property updateHandler.autoCommit.maxDocs must be of Integer type");
+    runConfigCommandExpectFailure(
+        restTestHarness,
+        "/config",
+        payload,
+        "Property updateHandler.autoCommit.maxDocs must be of Integer type");
 
     payload = "{ unset-property: not-an-editable-property }";
-    runConfigCommandExpectFailure(restTestHarness, "/config", payload, "'[not-an-editable-property]' is not an editable property");
+    runConfigCommandExpectFailure(
+        restTestHarness,
+        "/config",
+        payload,
+        "'[not-an-editable-property]' is not an editable property");
 
-    for (String component : new String[] {
-        "requesthandler", "searchcomponent", "initparams", "queryresponsewriter", "queryparser",
-        "valuesourceparser", "transformer", "updateprocessor", "queryconverter", "listener"}) {
-      for (String operation : new String[] { "add", "update" }) {
+    for (String component :
+        new String[] {
+          "requesthandler", "searchcomponent", "initparams", "queryresponsewriter", "queryparser",
+          "valuesourceparser", "transformer", "updateprocessor", "queryconverter", "listener"
+        }) {
+      for (String operation : new String[] {"add", "update"}) {
         payload = "{ " + operation + "-" + component + ": { param1: value1 } }";
-        runConfigCommandExpectFailure(restTestHarness, "/config", payload, "'name' is a required field");
+        runConfigCommandExpectFailure(
+            restTestHarness, "/config", payload, "'name' is a required field");
       }
       payload = "{ delete-" + component + ": not-a-real-component-name }";
       runConfigCommandExpectFailure(restTestHarness, "/config", payload, "NO such ");
@@ -583,41 +693,48 @@ public class TestSolrConfigHandler extends RestTestBase {
     public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) throws IOException {
       super.handleRequestBody(req, rsp);
       String[] caches = req.getParams().getParams("cacheNames");
-      if(caches != null && caches.length>0){
+      if (caches != null && caches.length > 0) {
         HashMap<String, String> m = new HashMap<>();
         rsp.add("caches", m);
         for (String c : caches) {
           SolrCache<?, ?> cache = req.getSearcher().getCache(c);
-          if(cache != null) m.put(c, cache.getClass().getName());
+          if (cache != null) m.put(c, cache.getClass().getName());
         }
       }
     }
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
-  public static LinkedHashMapWriter testForResponseElement(RestTestHarness harness,
-                                           String testServerBaseUrl,
-                                           String uri,
-                                           CloudSolrClient cloudSolrClient, List<String> jsonPath,
-                                           Object expected,
-                                           long maxTimeoutSeconds) throws Exception {
+  public static LinkedHashMapWriter testForResponseElement(
+      RestTestHarness harness,
+      String testServerBaseUrl,
+      String uri,
+      CloudSolrClient cloudSolrClient,
+      List<String> jsonPath,
+      Object expected,
+      long maxTimeoutSeconds)
+      throws Exception {
 
     boolean success = false;
     LinkedHashMapWriter m = null;
 
     TimeOut timeOut = new TimeOut(maxTimeoutSeconds, TimeUnit.SECONDS, TimeSource.NANO_TIME);
-    while (! timeOut.hasTimedOut()) {
+    while (!timeOut.hasTimedOut()) {
       try {
-        m = testServerBaseUrl == null ? getRespMap(uri, harness) : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl + uri, cloudSolrClient);
+        m =
+            testServerBaseUrl == null
+                ? getRespMap(uri, harness)
+                : TestSolrConfigHandlerConcurrent.getAsMap(
+                    testServerBaseUrl + uri, cloudSolrClient);
       } catch (Exception e) {
         Thread.sleep(100);
         continue;
-
       }
       Object actual = Utils.getObjectByPath(m, false, jsonPath);
 
       if (expected instanceof ValidatingJsonMap.PredicateWithErrMsg) {
-        ValidatingJsonMap.PredicateWithErrMsg predicate = (ValidatingJsonMap.PredicateWithErrMsg) expected;
+        ValidatingJsonMap.PredicateWithErrMsg predicate =
+            (ValidatingJsonMap.PredicateWithErrMsg) expected;
         if (predicate.test(actual) == null) {
           success = true;
           break;
@@ -630,22 +747,25 @@ public class TestSolrConfigHandler extends RestTestBase {
         }
       }
       Thread.sleep(100);
-
     }
-    assertTrue(StrUtils.formatString("Could not get expected value  ''{0}'' for path ''{1}'' full output: {2},  from server:  {3}", expected, StrUtils.join(jsonPath, '/'), m.toString(), testServerBaseUrl), success);
+    assertTrue(
+        StrUtils.formatString(
+            "Could not get expected value  ''{0}'' for path ''{1}'' full output: {2},  from server:  {3}",
+            expected, StrUtils.join(jsonPath, '/'), m.toString(), testServerBaseUrl),
+        success);
 
     return m;
   }
 
   public void testReqParams() throws Exception {
     RestTestHarness harness = restTestHarness;
-    String payload = " {\n" +
-        "  'set' : {'x': {" +
-        "                    'a':'A val',\n" +
-        "                    'b': 'B val'}\n" +
-        "             }\n" +
-        "  }";
-
+    String payload =
+        " {\n"
+            + "  'set' : {'x': {"
+            + "                    'a':'A val',\n"
+            + "                    'b': 'B val'}\n"
+            + "             }\n"
+            + "  }";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config/params", payload);
 
@@ -667,9 +787,10 @@ public class TestSolrConfigHandler extends RestTestBase {
         "B val",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'create-requesthandler' : { 'name' : '/d', registerPath :'/solr,/v2' , 'class': 'org.apache.solr.handler.DumpRequestHandler' }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'create-requesthandler' : { 'name' : '/d', registerPath :'/solr,/v2' , 'class': 'org.apache.solr.handler.DumpRequestHandler' }\n"
+            + "}";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config", payload);
 
@@ -682,14 +803,10 @@ public class TestSolrConfigHandler extends RestTestBase {
         "/d",
         TIMEOUT_S);
 
-    TestSolrConfigHandler.testForResponseElement(harness,
-        null,
-        "/d?useParams=x",
-        null,
-        asList("params", "a"),
-        "A val",
-        TIMEOUT_S);
-    TestSolrConfigHandler.testForResponseElement(harness,
+    TestSolrConfigHandler.testForResponseElement(
+        harness, null, "/d?useParams=x", null, asList("params", "a"), "A val", TIMEOUT_S);
+    TestSolrConfigHandler.testForResponseElement(
+        harness,
         null,
         "/d?useParams=x&a=fomrequest",
         null,
@@ -697,13 +814,15 @@ public class TestSolrConfigHandler extends RestTestBase {
         "fomrequest",
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "'create-requesthandler' : { 'name' : '/dump1', registerPath :'/solr,/v2' , 'class': 'org.apache.solr.handler.DumpRequestHandler', 'useParams':'x' }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "'create-requesthandler' : { 'name' : '/dump1', registerPath :'/solr,/v2' , 'class': 'org.apache.solr.handler.DumpRequestHandler', 'useParams':'x' }\n"
+            + "}";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config", payload);
 
-    TestSolrConfigHandler.testForResponseElement(harness,
+    TestSolrConfigHandler.testForResponseElement(
+        harness,
         null,
         "/config/overlay",
         null,
@@ -712,23 +831,16 @@ public class TestSolrConfigHandler extends RestTestBase {
         TIMEOUT_S);
 
     TestSolrConfigHandler.testForResponseElement(
-        harness,
-        null,
-        "/dump1",
-        null,
-        asList("params", "a"),
-        "A val",
-        TIMEOUT_S);
+        harness, null, "/dump1", null, asList("params", "a"), "A val", TIMEOUT_S);
 
-
-    payload = " {\n" +
-        "  'set' : {'y':{\n" +
-        "                'c':'CY val',\n" +
-        "                'b': 'BY val', " +
-        "                'd': ['val 1', 'val 2']}\n" +
-        "             }\n" +
-        "  }";
-
+    payload =
+        " {\n"
+            + "  'set' : {'y':{\n"
+            + "                'c':'CY val',\n"
+            + "                'b': 'BY val', "
+            + "                'd': ['val 1', 'val 2']}\n"
+            + "             }\n"
+            + "  }";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config/params", payload);
 
@@ -741,32 +853,14 @@ public class TestSolrConfigHandler extends RestTestBase {
         "CY val",
         TIMEOUT_S);
 
-    TestSolrConfigHandler.testForResponseElement(harness,
-        null,
-        "/dump1?useParams=y",
-        null,
-        asList("params", "c"),
-        "CY val",
-        TIMEOUT_S);
-
+    TestSolrConfigHandler.testForResponseElement(
+        harness, null, "/dump1?useParams=y", null, asList("params", "c"), "CY val", TIMEOUT_S);
 
     TestSolrConfigHandler.testForResponseElement(
-        harness,
-        null,
-        "/dump1?useParams=y",
-        null,
-        asList("params", "b"),
-        "BY val",
-        TIMEOUT_S);
+        harness, null, "/dump1?useParams=y", null, asList("params", "b"), "BY val", TIMEOUT_S);
 
     TestSolrConfigHandler.testForResponseElement(
-        harness,
-        null,
-        "/dump1?useParams=y",
-        null,
-        asList("params", "a"),
-        "A val",
-        TIMEOUT_S);
+        harness, null, "/dump1?useParams=y", null, asList("params", "a"), "A val", TIMEOUT_S);
 
     TestSolrConfigHandler.testForResponseElement(
         harness,
@@ -777,15 +871,15 @@ public class TestSolrConfigHandler extends RestTestBase {
         asList("val 1", "val 2"),
         TIMEOUT_S);
 
-    payload = " {\n" +
-        "  'update' : {'y': {\n" +
-        "                'c':'CY val modified',\n" +
-        "                'e':'EY val',\n" +
-        "                'b': 'BY val'" +
-        "}\n" +
-        "             }\n" +
-        "  }";
-
+    payload =
+        " {\n"
+            + "  'update' : {'y': {\n"
+            + "                'c':'CY val modified',\n"
+            + "                'e':'EY val',\n"
+            + "                'b': 'BY val'"
+            + "}\n"
+            + "             }\n"
+            + "  }";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config/params", payload);
 
@@ -807,14 +901,14 @@ public class TestSolrConfigHandler extends RestTestBase {
         "EY val",
         TIMEOUT_S);
 
-    payload = " {\n" +
-        "  'set' : {'y': {\n" +
-        "                'p':'P val',\n" +
-        "                'q': 'Q val'" +
-        "}\n" +
-        "             }\n" +
-        "  }";
-
+    payload =
+        " {\n"
+            + "  'set' : {'y': {\n"
+            + "                'p':'P val',\n"
+            + "                'q': 'Q val'"
+            + "}\n"
+            + "             }\n"
+            + "  }";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config/params", payload);
     TestSolrConfigHandler.testForResponseElement(
@@ -845,27 +939,29 @@ public class TestSolrConfigHandler extends RestTestBase {
         null,
         TIMEOUT_S);
 
-    payload = "{\n" +
-        "  'create-requesthandler': {\n" +
-        "    'name': 'aRequestHandler',\n" +
-        "    'registerPath': '/v2',\n" +
-        "    'class': 'org.apache.solr.handler.DumpRequestHandler',\n" +
-        "    'spec': {\n" +
-        "      'methods': [\n" +
-        "        'GET',\n" +
-        "        'POST'\n" +
-        "      ],\n" +
-        "      'url': {\n" +
-        "        'paths': [\n" +
-        "          '/something/{part1}/fixed/{part2}'\n" +
-        "        ]\n" +
-        "      }\n" +
-        "    }\n" +
-        "  }\n" +
-        "}";
+    payload =
+        "{\n"
+            + "  'create-requesthandler': {\n"
+            + "    'name': 'aRequestHandler',\n"
+            + "    'registerPath': '/v2',\n"
+            + "    'class': 'org.apache.solr.handler.DumpRequestHandler',\n"
+            + "    'spec': {\n"
+            + "      'methods': [\n"
+            + "        'GET',\n"
+            + "        'POST'\n"
+            + "      ],\n"
+            + "      'url': {\n"
+            + "        'paths': [\n"
+            + "          '/something/{part1}/fixed/{part2}'\n"
+            + "        ]\n"
+            + "      }\n"
+            + "    }\n"
+            + "  }\n"
+            + "}";
 
     TestSolrConfigHandler.runConfigCommand(harness, "/config", payload);
-    TestSolrConfigHandler.testForResponseElement(harness,
+    TestSolrConfigHandler.testForResponseElement(
+        harness,
         null,
         "/config/overlay",
         null,
@@ -873,41 +969,43 @@ public class TestSolrConfigHandler extends RestTestBase {
         "org.apache.solr.handler.DumpRequestHandler",
         TIMEOUT_S);
     RESTfulServerProvider oldProvider = restTestHarness.getServerProvider();
-    restTestHarness.setServerProvider(() -> jetty.getBaseUrl().toString() + "/____v2/cores/" + DEFAULT_TEST_CORENAME);
+    restTestHarness.setServerProvider(
+        () -> getBaseUrl() + "/____v2/cores/" + DEFAULT_TEST_CORENAME);
 
-    Map<?, ?> rsp = TestSolrConfigHandler.testForResponseElement(
-        harness,
-        null,
-        "/something/part1_Value/fixed/part2_Value?urlTemplateValues=part1&urlTemplateValues=part2",
-        null,
-        asList("urlTemplateValues"),
-        new ValidatingJsonMap.PredicateWithErrMsg<>() {
-          @Override
-          public String test(Object o) {
-            if (o instanceof Map) {
-              Map<?, ?> m = (Map<?, ?>) o;
-              if ("part1_Value".equals(m.get("part1"))  && "part2_Value".equals(m.get("part2"))) return null;
+    Map<?, ?> rsp =
+        TestSolrConfigHandler.testForResponseElement(
+            harness,
+            null,
+            "/something/part1_Value/fixed/part2_Value?urlTemplateValues=part1&urlTemplateValues=part2",
+            null,
+            asList("urlTemplateValues"),
+            new ValidatingJsonMap.PredicateWithErrMsg<>() {
+              @Override
+              public String test(Object o) {
+                if (o instanceof Map) {
+                  Map<?, ?> m = (Map<?, ?>) o;
+                  if ("part1_Value".equals(m.get("part1")) && "part2_Value".equals(m.get("part2")))
+                    return null;
+                }
+                return "no match";
+              }
 
-            }
-            return "no match";
-          }
-
-          @Override
-          public String toString() {
-            return "{part1:part1_Value, part2 : part2_Value]";
-          }
-        },
-        TIMEOUT_S);
+              @Override
+              public String toString() {
+                return "{part1:part1_Value, part2 : part2_Value]";
+              }
+            },
+            TIMEOUT_S);
     restTestHarness.setServerProvider(oldProvider);
-
   }
 
-
   @SuppressWarnings({"rawtypes"})
-  public static LinkedHashMapWriter getRespMap(String path, RestTestHarness restHarness) throws Exception {
+  public static LinkedHashMapWriter getRespMap(String path, RestTestHarness restHarness)
+      throws Exception {
     String response = restHarness.query(path);
     try {
-      return (LinkedHashMapWriter) Utils.MAPWRITEROBJBUILDER.apply(Utils.getJSONParser(new StringReader(response))).getVal();
+      return (LinkedHashMapWriter)
+          Utils.MAPWRITEROBJBUILDER.apply(Utils.getJSONParser(new StringReader(response))).getVal();
     } catch (JSONParser.ParseException e) {
       log.error(response);
       return new LinkedHashMapWriter<>();
