@@ -21,54 +21,43 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-
-import org.apache.commons.io.IOUtils;
-import org.apache.lucene.util.LuceneTestCase;
+import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.SolrInputDocument;
-import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-/**
- * See SOLR-2854.
- */
-@SuppressSSL     // does not yet work with ssl yet - uses raw java.net.URL API rather than HttpClient
+/** See SOLR-2854. */
+@SuppressSSL // does not yet work with ssl yet - uses raw java.net.URL API rather than HttpClient
 public class TestRemoteStreaming extends SolrJettyTestBase {
-  private static File solrHomeDirectory;
-  
+
   @BeforeClass
   public static void beforeTest() throws Exception {
-    //this one has handleSelect=true which a test here needs
-    solrHomeDirectory = createTempDir(LuceneTestCase.getTestClass().getSimpleName()).toFile();
+    System.setProperty("solr.enableRemoteStreaming", "true");
+    System.setProperty("solr.enableStreamBody", "true");
+    // this one has handleSelect=true which a test here needs
+    File solrHomeDirectory = createTempDir(LuceneTestCase.getTestClass().getSimpleName()).toFile();
     setupJettyTestHome(solrHomeDirectory, "collection1");
     createAndStartJetty(solrHomeDirectory.getAbsolutePath());
   }
 
-  @AfterClass
-  public static void afterTest() throws Exception {
-
-  }
-
   @Before
   public void doBefore() throws IOException, SolrServerException {
-    //add document and commit, and ensure it's there
+    // add document and commit, and ensure it's there
     SolrClient client = getSolrClient();
     SolrInputDocument doc = new SolrInputDocument();
-    doc.addField( "id", "1234" );
+    doc.addField("id", "1234");
     client.add(doc);
     client.commit();
     assertTrue(searchFindsIt());
@@ -76,31 +65,30 @@ public class TestRemoteStreaming extends SolrJettyTestBase {
 
   @Test
   public void testMakeDeleteAllUrl() throws Exception {
-    getUrlForString(makeDeleteAllUrl());
+    assertTrue(searchFindsIt());
+    attemptHttpGet(makeDeleteAllUrl());
     assertFalse(searchFindsIt());
   }
 
   @Test
   public void testStreamUrl() throws Exception {
-    HttpSolrClient client = (HttpSolrClient) getSolrClient();
-    String streamUrl = client.getBaseURL()+"/select?q=*:*&fl=id&wt=csv";
+    String streamUrl = getCoreUrl() + "/select?q=*:*&fl=id&wt=csv";
 
-    String getUrl = client.getBaseURL()+"/debug/dump?wt=xml&stream.url="+URLEncoder.encode(streamUrl,"UTF-8");
-    String content = getUrlForString(getUrl);
+    String getUrl =
+        getCoreUrl()
+            + "/debug/dump?wt=xml&stream.url="
+            + URLEncoder.encode(streamUrl, StandardCharsets.UTF_8);
+    String content = attemptHttpGet(getUrl);
     assertTrue(content.contains("1234"));
-    //System.out.println(content);
   }
 
-  private String getUrlForString(String getUrl) throws IOException {
+  private String attemptHttpGet(String getUrl) throws IOException {
     Object obj = new URL(getUrl).getContent();
     if (obj instanceof InputStream) {
-      InputStream inputStream = (InputStream) obj;
-      try {
+      try (InputStream inputStream = (InputStream) obj) {
         StringWriter strWriter = new StringWriter();
         new InputStreamReader(inputStream, StandardCharsets.UTF_8).transferTo(strWriter);
         return strWriter.toString();
-      } finally {
-        IOUtils.closeQuietly(inputStream);
       }
     }
     return null;
@@ -110,22 +98,23 @@ public class TestRemoteStreaming extends SolrJettyTestBase {
   @Test
   public void testNoUrlAccess() throws Exception {
     SolrQuery query = new SolrQuery();
-    query.setQuery( "*:*" );//for anything
-    query.add("stream.url",makeDeleteAllUrl());
+    query.setQuery("*:*"); // for anything
+    query.add("stream.url", makeDeleteAllUrl());
     SolrException se = expectThrows(SolrException.class, () -> getSolrClient().query(query));
     assertSame(ErrorCode.BAD_REQUEST, ErrorCode.getErrorCode(se.code()));
   }
-  
-  /** Compose a url that if you get it, it will delete all the data. */
-  private String makeDeleteAllUrl() throws UnsupportedEncodingException {
-    HttpSolrClient client = (HttpSolrClient) getSolrClient();
+
+  /** Compose an HTTP GET url that will delete all the data. */
+  private String makeDeleteAllUrl() {
     String deleteQuery = "<delete><query>*:*</query></delete>";
-    return client.getBaseURL()+"/update?commit=true&stream.body="+ URLEncoder.encode(deleteQuery, "UTF-8");
+    return getCoreUrl()
+        + "/update?commit=true&stream.body="
+        + URLEncoder.encode(deleteQuery, StandardCharsets.UTF_8);
   }
 
   private boolean searchFindsIt() throws SolrServerException, IOException {
     SolrQuery query = new SolrQuery();
-    query.setQuery( "id:1234" );
+    query.setQuery("id:1234");
     QueryResponse rsp = getSolrClient().query(query);
     return rsp.getResults().getNumFound() != 0;
   }
