@@ -28,40 +28,37 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
-
 import org.apache.commons.io.IOUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.core.SolrResourceLoader;
 
-/**
- * Tests {@link ContentStream} such as "stream.file".
- */
+/** Tests {@link ContentStream} such as "stream.file". */
 public class ContentStreamTest extends SolrTestCaseJ4 {
 
   public void testStringStream() throws IOException {
     String input = "aads ghaskdgasgldj asl sadg ajdsg &jag # @ hjsakg hsakdg hjkas s";
     ContentStreamBase stream = new ContentStreamBase.StringStream(input);
-    assertEquals(input.length(), stream.getSize().intValue());
-    assertEquals(input, IOUtils.toString(stream.getStream(), "UTF-8"));
-    assertEquals(input, IOUtils.toString(stream.getReader()));
+    assertEquals(input.length(), stream.getSize().longValue());
+    assertEquals(input, new String(stream.getStream().readAllBytes(), StandardCharsets.UTF_8));
+    assertEquals(input, StrUtils.stringFromReader(stream.getReader()));
   }
 
   public void testFileStream() throws IOException {
     File file = new File(createTempDir().toFile(), "README");
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file)) {
       assertNotNull(is);
       is.transferTo(os);
     }
 
     ContentStreamBase stream = new ContentStreamBase.FileStream(file);
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         InputStreamReader isr = new InputStreamReader(
-             new FileInputStream(file), StandardCharsets.UTF_8);
-         Reader r = stream.getReader()) {
-      assertEquals(file.length(), stream.getSize().intValue());
+        FileInputStream fis = new FileInputStream(file);
+        InputStreamReader isr =
+            new InputStreamReader(new FileInputStream(file), StandardCharsets.UTF_8);
+        Reader r = stream.getReader()) {
+      assertEquals(file.length(), stream.getSize().longValue());
       // Test the code that sets content based on < being the 1st character
       assertEquals("application/xml", stream.getContentType());
       assertTrue(IOUtils.contentEquals(fis, s));
@@ -73,21 +70,21 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     File file = new File(createTempDir().toFile(), "README.gz");
 
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file);
-         GZIPOutputStream zos = new GZIPOutputStream(os)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file);
+        GZIPOutputStream zos = new GZIPOutputStream(os)) {
       is.transferTo(zos);
     }
 
     ContentStreamBase stream = new ContentStreamBase.FileStream(file);
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         GZIPInputStream zis = new GZIPInputStream(fis);
-         InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
-         FileInputStream fis2 = new FileInputStream(file);
-         GZIPInputStream zis2 = new GZIPInputStream(fis2);
-         Reader r = stream.getReader()) {
-      assertEquals(file.length(), stream.getSize().intValue());
+        FileInputStream fis = new FileInputStream(file);
+        GZIPInputStream zis = new GZIPInputStream(fis);
+        InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
+        FileInputStream fis2 = new FileInputStream(file);
+        GZIPInputStream zis2 = new GZIPInputStream(fis2);
+        Reader r = stream.getReader()) {
+      assertEquals(file.length(), stream.getSize().longValue());
       // Test the code that sets content based on < being the 1st character
       assertEquals("application/xml", stream.getContentType());
       assertTrue(IOUtils.contentEquals(isr, r));
@@ -99,29 +96,30 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     File file = new File(createTempDir().toFile(), "README");
 
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file)) {
       is.transferTo(os);
     }
 
-    ContentStreamBase stream = new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+    ContentStreamBase stream =
+        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
 
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         FileInputStream fis2 = new FileInputStream(file);
-         InputStreamReader isr = new InputStreamReader(fis, StandardCharsets.UTF_8);
-         Reader r = stream.getReader()) {
-      // For File URLs, the content type is determined automatically by the mime type
-      // associated with the file extension,
-      // This is inconsistent from the FileStream as that code tries to guess the content based on the 1st character.
+        FileInputStream fis = new FileInputStream(file);
+        FileInputStream fis2 = new FileInputStream(file);
+        InputStreamReader isr = new InputStreamReader(fis, StandardCharsets.UTF_8);
+        Reader r = stream.getReader()) {
+      // For File URLs, the content type is determined automatically by the mime type associated
+      // with the file extension. This is inconsistent from the FileStream as that code tries to
+      // guess the content based on the 1st character.
       //
       // HTTP URLS, the content type is determined by the headers.  Those are not tested here.
       //
       assertEquals("text/html", stream.getContentType());
       assertTrue(IOUtils.contentEquals(fis2, s));
-      assertEquals(file.length(), stream.getSize().intValue());
+      assertEquals(file.length(), stream.getSize().longValue());
       assertTrue(IOUtils.contentEquals(isr, r));
-      assertEquals(file.length(), stream.getSize().intValue());
+      assertEquals(file.length(), stream.getSize().longValue());
     }
   }
 
@@ -129,25 +127,26 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     File file = new File(createTempDir().toFile(), "README.gz");
 
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file);
-         GZIPOutputStream zos = new GZIPOutputStream(os)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file);
+        GZIPOutputStream zos = new GZIPOutputStream(os)) {
       is.transferTo(zos);
     }
 
-    ContentStreamBase stream = new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+    ContentStreamBase stream =
+        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         GZIPInputStream zis = new GZIPInputStream(fis);
-         InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
-         FileInputStream fis2 = new FileInputStream(file);
-         GZIPInputStream zis2 = new GZIPInputStream(fis2);
-         Reader r = stream.getReader()) {
+        FileInputStream fis = new FileInputStream(file);
+        GZIPInputStream zis = new GZIPInputStream(fis);
+        InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
+        FileInputStream fis2 = new FileInputStream(file);
+        GZIPInputStream zis2 = new GZIPInputStream(fis2);
+        Reader r = stream.getReader()) {
       // See the non-GZIP test case for an explanation of header handling.
       assertEquals("application/xml", stream.getContentType());
       assertTrue(IOUtils.contentEquals(isr, r));
       assertTrue(IOUtils.contentEquals(zis2, s));
-      assertEquals(file.length(), stream.getSize().intValue());
+      assertEquals(file.length(), stream.getSize().longValue());
     }
   }
 
@@ -155,25 +154,26 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     File file = new File(createTempDir().toFile(), "README.CSV.gz");
 
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file);
-         GZIPOutputStream zos = new GZIPOutputStream(os)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file);
+        GZIPOutputStream zos = new GZIPOutputStream(os)) {
       is.transferTo(zos);
     }
 
-    ContentStreamBase stream = new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+    ContentStreamBase stream =
+        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         GZIPInputStream zis = new GZIPInputStream(fis);
-         InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
-         FileInputStream fis2 = new FileInputStream(file);
-         GZIPInputStream zis2 = new GZIPInputStream(fis2);
-         Reader r = stream.getReader()) {
+        FileInputStream fis = new FileInputStream(file);
+        GZIPInputStream zis = new GZIPInputStream(fis);
+        InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
+        FileInputStream fis2 = new FileInputStream(file);
+        GZIPInputStream zis2 = new GZIPInputStream(fis2);
+        Reader r = stream.getReader()) {
       // See the non-GZIP test case for an explanation of header handling.
       assertEquals("text/csv", stream.getContentType());
       assertTrue(IOUtils.contentEquals(isr, r));
       assertTrue(IOUtils.contentEquals(zis2, s));
-      assertEquals(file.length(), stream.getSize().intValue());
+      assertEquals(file.length(), stream.getSize().longValue());
     }
   }
 
@@ -181,25 +181,26 @@ public class ContentStreamTest extends SolrTestCaseJ4 {
     File file = new File(createTempDir().toFile(), "README.json.gzip");
 
     try (SolrResourceLoader srl = new SolrResourceLoader(Paths.get("").toAbsolutePath());
-         InputStream is = srl.openResource("solrj/README");
-         FileOutputStream os = new FileOutputStream(file);
-         GZIPOutputStream zos = new GZIPOutputStream(os)) {
+        InputStream is = srl.openResource("solrj/README");
+        FileOutputStream os = new FileOutputStream(file);
+        GZIPOutputStream zos = new GZIPOutputStream(os)) {
       is.transferTo(zos);
     }
 
-    ContentStreamBase stream = new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
+    ContentStreamBase stream =
+        new ContentStreamBase.URLStream(new URL(file.toURI().toASCIIString()));
     try (InputStream s = stream.getStream();
-         FileInputStream fis = new FileInputStream(file);
-         GZIPInputStream zis = new GZIPInputStream(fis);
-         InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
-         FileInputStream fis2 = new FileInputStream(file);
-         GZIPInputStream zis2 = new GZIPInputStream(fis2);
-         Reader r = stream.getReader()) {
+        FileInputStream fis = new FileInputStream(file);
+        GZIPInputStream zis = new GZIPInputStream(fis);
+        InputStreamReader isr = new InputStreamReader(zis, StandardCharsets.UTF_8);
+        FileInputStream fis2 = new FileInputStream(file);
+        GZIPInputStream zis2 = new GZIPInputStream(fis2);
+        Reader r = stream.getReader()) {
       // See the non-GZIP test case for an explanation of header handling.
       assertEquals("application/json", stream.getContentType());
       assertTrue(IOUtils.contentEquals(isr, r));
       assertTrue(IOUtils.contentEquals(zis2, s));
-      assertEquals(file.length(), stream.getSize().intValue());
+      assertEquals(file.length(), stream.getSize().longValue());
     }
   }
 }
